macros/tests/trybuild/type.rs
use serde_args_macros::help;

#[help]
type Foo = usize;

fn main() {}
